# poc_scraper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
configs/: icp.yaml
deploy/hf-space/: README.md
deploy/oracle/: provision.sh  setup.sh
docs/: DEPLOY.md
evals/: CALIBRATION.md  COVERAGE.md  REPORT.md  agreement.py  calibration.json  check_coverage.py  labeled.jsonl  report.py  rubric.py  run-log.json  run_eval.py  run_live.py
evals/templates/: report.md.j2
fixtures/demo-bundle/: README.md
inputs/: accounts.csv
scripts/: check_public_discipline.py  push_hf_space.py  setup_sheet.py  verify_public_repo.py
src/: __init__.py  _json_utils.py  citations.py  config.py  contacts.py  csv_io.py  enrich.py  icp_config.py  models.py  outreach.py  pipeline.py  score.py  sheets.py
src/clients/: anthropic_client.py  browserbase_client.py  exa_client.py  nvidia_client.py  protocols.py  replay.py  retry.py
src/mcp_server/: __main__.py  evidence.py  limits.py  scoring.py  server.py  wiring.py
tests/functional/: test_anthropic_client.py  test_browserbase_client.py  test_contacts.py  test_enrich.py  test_eval_rubric.py  test_exa_client.py  test_mcp_server.py  (+6 more)
(+119 files in other folders)
